--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,9 @@ image: Visual Studio 2017
 
 clone_depth: 5
 
+environment:
+  VS_NdkRoot: 'C:\ProgramData\Microsoft\AndroidNDK64\android-ndk-r17'
+
 cache:
   - packages -> **\packages.config
 
