--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,11 +6,9 @@ cache:
   - C:\Microsoft\AndroidNDK64
 
 install:
-  - ps: get-location
+  - ps: get-item -path HKCU:\Software\Microsoft\VisualStudio\SecondaryInstaller\VC
+  - ps: Get-Location
   - ps: .\install.ps1
-  - ps: $ndkDir = "C:\Microsoft\AndroidNDK64"
-  - ps: get-childitem -path $ndkDir
-#  - ps: $url = "https://dl.google.com/android/repository/android-ndk-r15c-windows-x86_64.zip"
 
 before_build:
   - nuget restore AndroidAppVeyor.sln
