--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,9 @@ cache:
   - C:\Microsoft\AndroidNDK64
 
 install:
-  - ps: get-psdrive
-  - ps: get-item -path HKCU:\Software\Microsoft\VisualStudio\SecondaryInstaller\VC
+  - ps: get-childitem -path HKCU:\Software\Microsoft\VisualStudio
+  - ps: get-childitem -path HKCU:\Software\Microsoft\VisualStudio\SecondaryInstaller
+#  - ps: get-item -path HKCU:\Software\Microsoft\VisualStudio\SecondaryInstaller\VC
   - ps: Get-Location
   - ps: .\install.ps1
 
